revert back to Java 8 to get crap of hibernate running again