@@ -2,9 +2,8 @@ package at.wrk.coceso.plugin.geobroker.utils;
 
 import at.wrk.coceso.plugin.geobroker.contract.broker.GeoBrokerUnit;
 import at.wrk.coceso.plugin.geobroker.contract.broker.OneTimeAction;
+import com.google.common.collect.ImmutableList;
 import org.apache.commons.lang3.RandomUtils;
-
-import java.util.List;
 
 import static at.wrk.coceso.plugin.geobroker.utils.GeoBrokerPoints.randomPoint;
 import static at.wrk.coceso.plugin.geobroker.utils.Strings.randomString;
@@ -22,12 +21,12 @@ public final class GeoBrokerUnits {
                 externalUnitId,
                 randomString(),
                 randomString(),
-                List.of(randomString()),
-                List.of(randomString()),
+                ImmutableList.of(randomString()),
+                ImmutableList.of(randomString()),
                 randomPoint(),
                 randomPoint(),
                 RandomUtils.nextBoolean(),
-                List.of(
+                ImmutableList.of(
                         new OneTimeAction("testingAction", "https://invalid.server.local/foobar", null, null)
                 ));
     }
