@@ -4,14 +4,14 @@ import at.wrk.coceso.entity.User;
 import at.wrk.coceso.niu.data.ExternalUser;
 import at.wrk.coceso.niu.data.ExternalUserId;
 import at.wrk.coceso.niu.parser.ExternalUserParser;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collection;
-import java.util.List;
-import java.util.Set;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
@@ -41,10 +41,10 @@ class NiuUserImporterTest {
     void conflictingUsersInDatabase_runImporter_noException() {
         String csvData = "mocked-csv-data";
 
-        ExternalUser importedUser = new ExternalUser(new ExternalUserId(2, "created", "created"), Set.of());
-        when(externalUserParser.parseExternalUsers(csvData)).thenReturn(Set.of(importedUser));
+        ExternalUser importedUser = new ExternalUser(new ExternalUserId(2, "created", "created"), ImmutableSet.of());
+        when(externalUserParser.parseExternalUsers(csvData)).thenReturn(ImmutableSet.of(importedUser));
 
-        Collection<User> users = sut.updateUsers(csvData, List.of(createSampleUser(), createSampleUser()));
+        Collection<User> users = sut.updateUsers(csvData, ImmutableList.of(createSampleUser(), createSampleUser()));
 
         assertThat(users, hasItem(Matchers.<User>allOf(
                 hasProperty("personnelId", equalTo(2)),
@@ -57,10 +57,10 @@ class NiuUserImporterTest {
     void userWithoutDataInDatabase_runImporter_returnNewUser() {
         String csvData = "mocked-csv-data";
 
-        ExternalUser importedUser = new ExternalUser(new ExternalUserId(0, "", ""), Set.of("telephone-number"));
-        when(externalUserParser.parseExternalUsers(csvData)).thenReturn(Set.of(importedUser));
+        ExternalUser importedUser = new ExternalUser(new ExternalUserId(0, "", ""), ImmutableSet.of("telephone-number"));
+        when(externalUserParser.parseExternalUsers(csvData)).thenReturn(ImmutableSet.of(importedUser));
 
-        Collection<User> users = sut.updateUsers(csvData, List.of(createEmptyUser()));
+        Collection<User> users = sut.updateUsers(csvData, ImmutableList.of(createEmptyUser()));
 
         assertThat(users, hasItem(Matchers.<User>allOf(
                 hasProperty("personnelId", equalTo(0)),
