@@ -1,6 +1,7 @@
 package at.wrk.coceso.plugins.vienna.util;
 
 import at.wrk.geocode.autocomplete.CSVRecordParser;
+import com.google.common.collect.ImmutableList;
 import org.apache.commons.csv.CSVRecord;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -28,7 +29,7 @@ public class ViennaStreetParser implements CSVRecordParser<String> {
         final String districts = record.get(DISTRICT_COLUMN_NAME).trim();
 
         if (districts.length() == 0) {
-            return List.of(street);
+            return ImmutableList.of(street);
         }
 
         return Arrays.stream(districts.split("\\|"))
@@ -36,6 +37,6 @@ public class ViennaStreetParser implements CSVRecordParser<String> {
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .map(code -> street + "\n" + code + " Wien")
-                .collect(Collectors.toUnmodifiableList());
+                .collect(Collectors.toList());
     }
 }
